# gcontacts

./: Cargo.toml  LICENSE  README.md
locales/: en-US.ftl  ja-JP.ftl
src/: main.rs  mod_auth.rs  mod_fluent.rs  mod_locale.rs
